<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/movie_backdrop_iv"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/movie_poster"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/gradient_panel_black"
                app:elevation="4dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/layout_general_margin">

            <TextView
                android:id="@+id/movie_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                tools:text="This is a movie with a very very long title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_general_margin">

                <TextView
                    android:id="@+id/movie_vote_average_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    tools:text="4.2" />

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/movie_vote_average_tv"
                    android:layout_toStartOf="@id/movie_vote_average_tv"
                    android:text="@string/movie_release_date" />

                <TextView
                    android:id="@+id/movie_release_date_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text1"
                    android:layout_toLeftOf="@id/movie_vote_average_tv"
                    android:layout_toStartOf="@id/movie_vote_average_tv"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/primary_text_dark"
                    tools:text="20 Aug 2017" />

            </RelativeLayout>

            <TextView
                android:id="@+id/movie_overview_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_general_margin"
                android:lineSpacingMultiplier="1.3"
                tools:text="@string/lorem_ipsum" />

            <TextView
                style="@style/SectionTextStyle"
                android:layout_marginTop="@dimen/layout_large_margin"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/movie_videos" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_small_margin"
                android:layout_marginTop="@dimen/layout_general_margin">

                <TextView
                    android:id="@+id/movie_videos_empty_tv"
                    style="@style/EmptyTextStyle"
                    android:layout_gravity="center"
                    android:text="@string/movie_videos_empty"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/movie_videos_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:listitem="@layout/item_movie_video" />

                <ProgressBar
                    android:id="@+id/movie_videos_progressbar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </FrameLayout>

            <TextView
                style="@style/SectionTextStyle"
                android:layout_marginTop="@dimen/layout_large_margin"
                android:text="@string/movie_reviews" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_general_margin">

                <TextView
                    android:id="@+id/movie_reviews_empty_tv"
                    style="@style/EmptyTextStyle"
                    android:layout_gravity="center"
                    android:text="@string/movie_reviews_empty"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/movie_reviews_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:listitem="@layout/item_movie_review" />

                <ProgressBar
                    android:id="@+id/movie_reviews_progressbar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </FrameLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>